bug: removed overflow hidden on headerr

--- a/src/index.css
+++ b/src/index.css
@@ -63,8 +63,7 @@ header {
   top: 0rem;
   z-index: 1000;
   width: 100%;
-  overflow: hidden;
-}
+  }
 .logo {
   color: hsl(0, 5%, 96%);
 }
